--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-.*
-
-!.gitignore
-
 .cache
 /.classpath
 db
@@ -33,3 +29,9 @@ test-result
 tmp
 .idea_modules
 bin
+**/Scratchpad.scala
+
+*.log
+t
+nohup.out
+nohup
