--- a/conf/application.conf
+++ b/conf/application.conf
@@ -45,6 +45,8 @@ play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.MicroserviceFilters"
 # Json error handler
 play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
 
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
+
 # Session Timeout
 # ~~~~
 # The default session timeout for the app is 15 minutes (900seconds).
