--- a/conf/application.conf
+++ b/conf/application.conf
@@ -139,9 +139,12 @@ aws {
   accessKeyId = ${?AWS_ACCESS_KEY_ID}
   secretAccessKey = ${?AWS_SECRET_ACCESS_KEY}
   sessionToken = ${?AWS_SESSION_TOKEN}
-  s3.region = "eu-west-2"
+  s3 {
+    callbackUrlMetadataKey = "callback-url"
+    region = "eu-west-2"
+  }
   sqs {
-    outbound.successful.queue =  "https://sqs.eu-west-2.amazonaws.com/063874132475/fus-inbound-file-queue-development"
+    queue.outbound.successful =  "https://sqs.eu-west-2.amazonaws.com/063874132475/fus-inbound-file-queue-development"
     retry.interval = 20 seconds
   }
 }
