--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,7 +39,6 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModu
 # Provides an implementation and configures all filters required by a Platform frontend microservice.
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
 
-
 play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.MicroserviceFilters"
 
 # Json error handler
@@ -140,83 +139,86 @@ aws {
 }
 
 
-  # Microservice specific config
+# Microservice specific config
 
-  Test {
-    auditing {
-      enabled=true
-      traceRequests=true
-      consumer {
-        baseUri {
-          host = localhost
-          port = 11111
-        }
-      }
-    }
-
-    microservice {
-      metrics {
-        graphite {
-          enabled = false
-        }
-        gauges {
-          interval = 1 second
-        }
+Test {
+  auditing {
+    enabled=true
+    traceRequests=true
+    consumer {
+      baseUri {
+        host = localhost
+        port = 11111
       }
     }
   }
 
-  Dev {
-    auditing {
-      enabled=true
-      traceRequests=true
-      consumer {
-        baseUri {
-          host = localhost
-          port = 8100
-        }
+  microservice {
+    metrics {
+      graphite {
+        enabled = false
+      }
+      gauges {
+        interval = 1 second
       }
     }
+  }
+}
 
-    microservice {
-      metrics {
-        graphite {
-          enabled = false
-        }
-        gauges {
-          interval = 1 second
-        }
+Dev {
+  auditing {
+    enabled=true
+    traceRequests=true
+    consumer {
+      baseUri {
+        host = localhost
+        port = 8100
       }
+    }
+  }
 
+  microservice {
+    metrics {
+      graphite {
+        enabled = false
+      }
+      gauges {
+        interval = 1 second
+      }
     }
 
   }
 
-  Prod {
-    auditing {
-      enabled = true
-      traceRequests = true
-      consumer {
-        baseUri {
-          host = datastream.protected.mdtp
-          port = 80
-        }
+  aws {
+    sqs.outbound.successful.queue = "https://sqs.eu-west-2.amazonaws.com/415042754718/fus-outbound-file-queue-development"
+  }
+}
+
+Prod {
+  auditing {
+    enabled = true
+    traceRequests = true
+    consumer {
+      baseUri {
+        host = datastream.protected.mdtp
+        port = 80
       }
     }
+  }
 
-    microservice {
-      metrics {
-        graphite {
-          host = graphite
-          port = 2003
-          prefix = play.${appName}.
-          enabled = true
-        }
-        gauges {
-          interval = 1 minute
-        }
+  microservice {
+    metrics {
+      graphite {
+        host = graphite
+        port = 2003
+        prefix = play.${appName}.
+        enabled = true
       }
-
+      gauges {
+        interval = 1 minute
+      }
     }
 
   }
+
+}
