PLATY-426 Added client providers for AWS services, added guice integration of existing components

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -46,6 +46,9 @@ play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
 
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 
+play.modules.enabled += "service.aws.AWSClientModule"
+play.modules.enabled += "NotifyModule"
+
 # Session Timeout
 # ~~~~
 # The default session timeout for the app is 15 minutes (900seconds).
@@ -136,6 +139,8 @@ aws {
   accessKeyId = ${?AWS_ACCESS_KEY_ID}
   secretAccessKey = ${?AWS_SECRET_ACCESS_KEY}
   sessionToken = ${?AWS_SESSION_TOKEN}
+  s3.region = "eu-west-2"
+  sqs.outbound.successful.queue = "https://sqs.eu-west-2.amazonaws.com/415042754718/fus-outbound-file-queue-development"
 }
 
 
@@ -189,9 +194,6 @@ Dev {
 
   }
 
-  aws {
-    sqs.outbound.successful.queue = "https://sqs.eu-west-2.amazonaws.com/415042754718/fus-outbound-file-queue-development"
-  }
 }
 
 Prod {
