PLATY-426 Continous polling implemented using Akka, a bit of tidying up

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -46,7 +46,7 @@ play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
 
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 
-play.modules.enabled += "service.aws.AWSClientModule"
+play.modules.enabled += "connectors.aws.AWSClientModule"
 play.modules.enabled += "NotifyModule"
 
 # Session Timeout
@@ -140,7 +140,10 @@ aws {
   secretAccessKey = ${?AWS_SECRET_ACCESS_KEY}
   sessionToken = ${?AWS_SESSION_TOKEN}
   s3.region = "eu-west-2"
-  sqs.outbound.successful.queue = "https://sqs.eu-west-2.amazonaws.com/415042754718/fus-outbound-file-queue-development"
+  sqs {
+    outbound.successful.queue = "https://sqs.eu-west-2.amazonaws.com/415042754718/fus-outbound-file-queue-development"
+    retry.interval = 20 seconds
+  }
 }
 
 
