--- a/conf/application.conf
+++ b/conf/application.conf
@@ -142,6 +142,7 @@ aws {
   s3 {
     callbackUrlMetadataKey = "callback-url"
     region = "eu-west-2"
+    daysToExpiration = 7
   }
   sqs {
     queue.outbound.successful =  "https://sqs.eu-west-2.amazonaws.com/063874132475/fus-inbound-file-queue-development"
