PLATY-425: Changed how file lifetime is stored in config to more flexible duration

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -142,7 +142,7 @@ aws {
   s3 {
     callbackUrlMetadataKey = "callback-url"
     region = "eu-west-2"
-    daysToExpiration = 7
+    uploadLifetime = 7 days
   }
   sqs {
     queue.outbound.successful =  "https://sqs.eu-west-2.amazonaws.com/063874132475/fus-inbound-file-queue-development"
