--- a/conf/application.conf
+++ b/conf/application.conf
@@ -128,6 +128,7 @@ aws {
   }
   sqs {
     queue.outbound.successful =  "https://sqs.eu-west-2.amazonaws.com/063874132475/fus-inbound-file-queue-development"
+    queue.outbound.quarantine =  "https://sqs.eu-west-2.amazonaws.com/063874132475/fus-quarantined-file-queue-development"
     retry.interval = 20 seconds
   }
 }
