PLATY-499 Carried on work on refactoring the service. Tests are passing

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -48,6 +48,7 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 
 play.modules.enabled += "connectors.aws.AWSClientModule"
 play.modules.enabled += "NotifyModule"
+play.modules.enabled += "config.UpscanQueuesModule"
 
 # Session Timeout
 # ~~~~
