--- a/conf/application.conf
+++ b/conf/application.conf
@@ -47,7 +47,7 @@ play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 
 play.modules.enabled += "connectors.aws.AWSClientModule"
-play.modules.enabled += "NotifyModule"
+play.modules.enabled += "modules.NotifyModule"
 play.modules.enabled += "config.UpscanQueuesModule"
 
 # Session Timeout
@@ -138,12 +138,12 @@ aws {
 
 Test {
   auditing {
-    enabled=true
-    traceRequests=true
+    enabled=false
+    traceRequests=false
     consumer {
       baseUri {
         host = localhost
-        port = 11111
+        port = 8100
       }
     }
   }
@@ -155,6 +155,18 @@ Test {
       }
       gauges {
         interval = 1 second
+      }
+    }
+  }
+
+  upscan {
+    consuming-services {
+      consuming-service-123 {
+        aws {
+          s3 {
+            urlExpirationPeriod = 1 days
+          }
+        }
       }
     }
   }
