BDOG-644: remove RunMode prefixed config keys

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -136,6 +136,15 @@ aws {
 upscan.endToEndProcessing.threshold = 10 seconds
 
 # Microservice specific config
+consuming-services {
+  consuming-service-123 {
+    aws {
+      s3 {
+        urlExpirationPeriod = 1 day
+      }
+    }
+  }
+}
 
 Test {
   auditing {
@@ -156,18 +165,6 @@ Test {
       }
       gauges {
         interval = 1 second
-      }
-    }
-  }
-
-  upscan {
-    consuming-services {
-      consuming-service-123 {
-        aws {
-          s3 {
-            urlExpirationPeriod = 1 days
-          }
-        }
       }
     }
   }
@@ -194,8 +191,5 @@ Dev {
         interval = 1 second
       }
     }
-
   }
-
 }
-
