BDOG-3150 add a batch size to outbound queue consumers to ease the bottleneck witnessed in performance tests

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -58,6 +58,9 @@ aws {
   }
 }
 
+successful.processingBatchSize = 10
+quarantine.processingBatchSize = 10
+
 upscan.endToEndProcessing.threshold = 10 seconds
 
 # Microservice specific config
