--- a/conf/application.conf
+++ b/conf/application.conf
@@ -18,8 +18,7 @@ include "backend.conf"
 
 appName=upscan-notify
 
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
-
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientV2Module"
 play.modules.enabled += "connectors.aws.AWSClientModule"
 play.modules.enabled += "modules.NotifyModule"
 play.modules.enabled += "config.UpscanQueuesModule"
