BDOG-3255 Use hmrc package namespace

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -19,9 +19,9 @@ include "backend.conf"
 appName=upscan-notify
 
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientV2Module"
-play.modules.enabled += "connectors.aws.AWSClientModule"
-play.modules.enabled += "modules.NotifyModule"
-play.modules.enabled += "config.UpscanQueuesModule"
+play.modules.enabled += "uk.gov.hmrc.upscannotify.NotifyModule"
+play.modules.enabled += "uk.gov.hmrc.upscannotify.connector.aws.AWSClientModule"
+play.modules.enabled += "uk.gov.hmrc.upscannotify.config.UpscanQueuesModule"
 
 # Router
 # ~~~~~
