BDOG-3255 Use AWS Async Sqs client

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -54,8 +54,14 @@ aws {
 
 default.aws.s3.urlExpirationPeriod = 1.day
 
-successful.processingBatchSize = 10
-quarantine.processingBatchSize = 10
+successful {
+  processingBatchSize = 10
+  waitTime            = 20.seconds
+}
+quarantine {
+  processingBatchSize = 10
+  waitTime            = 20.seconds
+}
 
 upscan.endToEndProcessing.threshold = 10.seconds
 
