BDOG-3426 retrieve aws credentials from secrets manager

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,8 +35,9 @@ play.modules.enabled += "uk.gov.hmrc.upscannotify.connector.aws.AWSClientModule"
 play.http.router = prod.Routes
 
 aws {
+  secretArn       = "ENTER FULL ARN" # not used when running locally with aws-profile session
   accessKeyId     = "ENTER YOUR KEY"
-  secretAccessKey = "ENYER YOUR SECRET"
+  secretAccessKey = "ENTER YOUR SECRET"
   accessKeyId     = ${?AWS_ACCESS_KEY_ID}
   secretAccessKey = ${?AWS_SECRET_ACCESS_KEY}
   sessionToken    = ${?AWS_SESSION_TOKEN}
