BDOG-3406: Updated default and fallback expiration periods to 6 hours

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -52,7 +52,7 @@ aws {
   }
 }
 
-default.aws.s3.urlExpirationPeriod = 1.day
+default.aws.s3.urlExpirationPeriod = 6.hours
 
 successful {
   processingBatchSize = 10
